Fix Menu change Table Header change menu 2 Collapse

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -42,8 +42,9 @@
   cursor: pointer;
   transition: all 0.3s, padding 0s;
   &:hover {
-    background: @pro-header-hover-bg;
+    // background: @pro-header-hover-bg;
     // background: rgb(141, 220, 164);
+    background: @primary-color;
 
   }
 }
